# notas-musicais

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 01_tutorial.md  02_contribua.md  index.md
docs/api/: acordes.md  campo_harmonico.md  escalas.md
docs/stylesheets/: extra.css
docs/templates/: cards.html  instalacao.md  todos.md
notas_musicais/: __init__.py  acordes.py  campo_harmonico.py  cli.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_escalas.py
