[tool.poetry]
name = "notas-musicais-lj"
version = "0.1.2"
description = "Notas musicais é um CLI para ajudar na formação de escalas, acordes e campos harmônicos"
license = "MIT"
authors = ["Leonardo Jacomussi <leonardojacomussi@gmail.com>"]
readme = "README.md"
packages = [{include = "notas_musicais"}]
classifiers = [
    "Topic :: Education",
    "Environment :: Console",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
"Documentação" = "https://notas-musicais-lj.readthedocs.io/en/latest/"
"Código" = "https://github.com/leonardojacomussi/notas-musicais"
"Bug Tracker" = "https://github.com/leonardojacomussi/notas-musicais/issues"

[tool.poetry.scripts]
notas-musicais-lj = "notas_musicais.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.5"
rich = "^13.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.13.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.33"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.8"
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.4"
mkdocs-material-extensions = "^1.3.1"
pymdown-extensions = "^10.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile="black"
line_length=79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"
publish = "poetry publish -u __token__ -p $NOTAS_MUSICAIS_TOKEN"